изменяет содержание index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
     <section class="portfolio">
       <h2 class="title portfolio__title">Мои работы</h2>
-      <p class="portfolio__text">На данном этапе сверстал уже 11 макетов, здесь прикладываю ссылки к 4 из них.</p>
+      <p class="portfolio__text">На данном этапе сверстал уже 11 макетов, здесь прикладываю ссылки к пяти из них.</p>
       <ul class="portfolio__list">
         <li class="portfolio__item">
           <p class="portfolio__item-text">
