add food project

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       <ul class="portfolio__list">
         <li class="portfolio__item">
           <p class="portfolio__item-text">
+            Выпускная работа на курсе Ивана Пертриченко по JavaScript. Реализованы табы, слайдер, таймер, калькулятор,
+            отправка формы через AJAX, динамическое построение карточек товара, модально окно.
+          </p>
+          <a class="portfolio__item-link" href="projects/food/index.html">
+            <img src="img/food.png" alt="">
+          </a>
+        </li>
+        <li class="portfolio__item">
+          <p class="portfolio__item-text">
             Это выпускная работа на курсе "HTML и CSS. Адаптивная вёрстка и автоматизация" HTML Академии. Адаптив
             mobile first.
           </p>
