--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
             <img src="img/safari.png" alt="image">
           </a>
         </li>
+        <li class="portfolio__item">
+          <p class="portfolio__item-text">
+            Тестовое задание.
+          </p>
+          <a class="portfolio__item-link" href="projects/funbox/index.html">
+            <img src="img/funbox.png" alt="">
+          </a>
+        </li>
       </ul>
     </section>
     <section class="contacts">
