--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
             <img src="img/funbox.png" alt="">
           </a>
         </li>
+        <li class="portfolio__item">
+          <p class="portfolio__item-text">
+            Тестовое задание #2.
+          </p>
+          <a class="portfolio__item-link" href="projects/test1/index.html">
+            <img src="img/test1.png" alt="">
+          </a>
+        </li>
       </ul>
     </section>
     <section class="contacts">
