--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
             <img src="img/test1.png" alt="">
           </a>
         </li>
-        <li class="portfolio__item">
+        <!-- <li class="portfolio__item">
           <p class="portfolio__item-text">
             KitchenAid.
           </p>
           <a class="portfolio__item-link" href="projects/kitchenAid/index.html">
             <img src="img/kitchenAid.png" alt="">
           </a>
-        </li>
+        </li> -->
       </ul>
     </section>
     <section class="contacts">
