--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
       <ul class="portfolio__list">
         <li class="portfolio__item">
           <p class="portfolio__item-text">
+            Работы реализованные на курсе по JavaScript от школы Webcademy
+          </p>
+          <p>1. Проект бюджетный калькулятор. Использован подход MVC.</p>
+          <a class="portfolio__item-link" href="projects/calculator/index.html">
+            <img src="img/calc-img.png" alt="">
+          </a>
+          <p>
+            2. Планировщик задач. Реализовано добаление, удаление задач, а также фильтрация задач. Также при добавлении
+            и удалении задач, задачи сохраняются в localStorage.
+          </p>
+          <a class="portfolio__item-link" href="projects/todo-list/index.html">
+            <img src="img/toDo-img.jpg" alt="">
+          </a>
+          <p>3. Проект Квиз. Реализован функционал перемещения по карточкам, проверки ввода данных, сбора данных с
+            карточек, работы прогресс-бара, подсветки рамок для радио и чекбоксов</p>
+          <a class="portfolio__item-link" href="projects/quiz/index.html">
+            <img src="img/quiz-img.png" alt="">
+          </a>
+        </li>
+        <li class="portfolio__item">
+          <p class="portfolio__item-text">
             Выпускная работа на курсе Ивана Пертриченко по JavaScript. Реализованы табы, слайдер, таймер, калькулятор,
             отправка формы через AJAX, динамическое построение карточек товара, модально окно.
           </p>
