--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
       <h2 class="title contacts__title">Мои контакты</h2>
       <p class="contacts__text">Телефон:<a class="contacts__phone" href="tel:+79094930016">+79094930016</a></p>
       <p class="contacts__text">Email:<a class="contacts__email" href="#!">zaurdysh@gmail.com</a></p>
+      <p class="contacts__text">Мой телеграм: @zaurdysh</p>
     </section>
     <section class="diploma">
       <h2 class="title diploma__title">Свидетельства об окончании курсов</h2>
