--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </li>
         <li class="portfolio__item">
           <p class="portfolio__item-text">
-            6 страничный сайт. Адаптив desctop first.
+            6 страничный сайт. Адаптив desktop first.
           </p>
           <div class="portfolio__wrapper">
             <a class="portfolio__item-link" href="projects/desire/index.html">
@@ -92,7 +92,7 @@
         </li>
         <li class="portfolio__item">
           <p class="portfolio__item-text">
-            Это выпускная работа на курсе "HTML и CSS. Профессиональная вёрстка сайтов" HTML Академии. Адаптив desctop
+            Это выпускная работа на курсе "HTML и CSS. Профессиональная вёрстка сайтов" HTML Академии. Адаптив desktop
             first.
           </p>
           <div class="portfolio__wrapper">
@@ -106,7 +106,7 @@
         </li>
         <li class="portfolio__item">
           <p class="portfolio__item-text">
-            Лендинг. Cutspace. Адаптив desctop first.
+            Лендинг. Cutspace. Адаптив desktop first.
           </p>
           <a class="portfolio__item-link" href="projects/cutspace/index.html">
             <img src="img/cutspace.png" alt="image">
@@ -114,7 +114,7 @@
         </li>
         <li class="portfolio__item">
           <p class="portfolio__item-text">
-            Лендинг. Safari. Адаптив desctop first.
+            Лендинг. Safari. Адаптив desktop first.
           </p>
           <a class="portfolio__item-link" href="projects/safari/index.html">
             <img src="img/safari.png" alt="image">
