added photos project

--- a/index.html
+++ b/index.html
@@ -206,6 +206,19 @@
           </div>
         </div> -->
         <div class="portfolio-item">
+          <div class="image" title="React проект. Реализованы пагинация, фильтрация по списку, поиск.">
+            <a href="https://photospoject.netlify.app/">
+              <img src="img/photosProject.jpg" alt="">
+            </a>
+          </div>
+          <div class="hover-items">
+            <a href="https://github.com/Zaurd796/photos" class="icon">
+              <i class="fab fa-github"></i>
+              Project Source
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-item">
           <div class="image" title="React проект. Генератор мэмов.">
             <a href="https://memegenarator.netlify.app/">
               <img src="img/meme.jpg" alt="">
