add marvel project

--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
         Вот несколько выполненных мной проектов.
       </p>
       <div class="portfolios">
-        <!-- <div class="portfolio-item">
+        <div class="portfolio-item">
           <div class="image" title="Проект на React, React(hooks)">
-            <a href="projects/build/index.html">
+            <a href="https://bejewelled-narwhal-a84cf6.netlify.app/">
               <img src="img/marvel.jpg" alt="">
             </a>
           </div>
@@ -204,7 +204,7 @@
               Project Source
             </a>
           </div>
-        </div> -->
+        </div>
         <div class="portfolio-item">
           <div class="image" title="React проект. Реализованы пагинация, фильтрация по списку, поиск.">
             <a href="https://photospoject.netlify.app/">
