add React certificate

--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
                 <p>
                   <a href="certificate/проф.вёрстка.pdf">Профессиональная вёрстка</a>
                   <a href="certificate/адаптивная вёрстка и автоматизация.pdf">Адаптивная вёрстка</a>
+                  <a href="certificate/advanced React.pdf">Advanced React</a>
                 </p>
               </div>
               <div class="contact-item">
